Make sure secondary nav items don’t break onto two lines

--- a/static/sass/_v1_pattern_navigation.scss
+++ b/static/sass/_v1_pattern_navigation.scss
@@ -69,6 +69,10 @@
 
   .nav-secondary {
 
+    .p-inline-list__link {
+      display: inline-block;
+    }
+
     @media (min-width: $breakpoint-medium) {
        border-top: 1px solid $color-mid-light;
     }
